fix z-index issue on last todo row / footer

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,8 @@
 #filters a.active{
   font-weight: bold;
 }
+
+#todo-list{
+  position: relative;
+  z-index: 100;
+}
